# docs/swagger.json
@@ -562,7 +562,7 @@
                 }
             }
         },
-        "/events/participate-event/{userID}/{id}": {
+        "/events/participate-event/{id}": {
             "post": {
                 "security": [
                     {
@@ -1334,7 +1334,7 @@
                 "summary": "exist permission for organization and volunteers",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "name",
                         "name": "name",
                         "in": "path",
